--- a/ThreeP/ThreeP.csproj
+++ b/ThreeP/ThreeP.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
+        <Version>0.1.0.0</Version>
+        <LangVersion>preview</LangVersion>
+        
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -9,18 +12,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Update="Data\app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true"/>
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="10.0.0-preview.7.25380.108"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0-preview.7.25380.108"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0-preview.7.25380.108"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0-preview.7.25380.108"/>
+
+        <PackageReference Include="MudBlazor" Version="8.11.0" />
+        <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageReference Include="FluentResults" Version="4.0.0" />
+        <PackageReference Include="Humanizer.Core" Version="3.0.0-beta.96" />
+        <PackageReference Include="Humanizer.Core.pl" Version="3.0.0-beta.96" />
+        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.1-dev-02306" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ThreeP.ServiceDefaults\ThreeP.ServiceDefaults.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Modules\Olx\Configuration\olx.settings.json" />
+      <_ContentIncludedByDefault Remove="Modules\Olx\Pages\OlxCallBack.razor" />
     </ItemGroup>
 
 </Project>
