--- a/ThreeP/Configuration/Json/appsettings.json
+++ b/ThreeP/Configuration/Json/appsettings.json
@@ -2,6 +2,14 @@
     "ConnectionStrings": {
         "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
     },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.AspNetCore.Components.Server.Circuits": "Warning"
+        }
+    },
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
