--- a/ThreeP/ThreeP.csproj
+++ b/ThreeP/ThreeP.csproj
@@ -19,11 +19,11 @@
 
         <PackageReference Include="MudBlazor" Version="8.11.0" />
         <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
         <PackageReference Include="FluentResults" Version="4.0.0" />
         <PackageReference Include="Humanizer.Core" Version="3.0.0-beta.96" />
         <PackageReference Include="Humanizer.Core.pl" Version="3.0.0-beta.96" />
-        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.1-dev-02306" />
+<!--        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>-->
+<!--        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.1-dev-02306" />-->
     </ItemGroup>
 
     <ItemGroup>
